[package]
name = "diesel-dtrace"
version = "0.4.2"
edition = "2021"
authors = ["Benjamin Naecker <ben@oxide.computer>"]
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/diesel-dtrace.git"
description = "Add dtrace probes to Diesel connections"

[dependencies]
diesel = { version = "2.3.1", features = [ "r2d2", "i-implement-a-third-party-backend-and-opt-into-breaking-changes" ] }
serde = "1"
usdt = "0.6"
uuid = { version = ">=0.8.0, <2.0.0", features = [ "v4", "serde" ] }

[dev-dependencies]
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel" }
bb8 = "0.8"
diesel = { version = "2.3.1", features = [ "postgres", "r2d2", "i-implement-a-third-party-backend-and-opt-into-breaking-changes" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

[build-dependencies]
version_check = "0.9"
